xong thong bao homepage

--- a/home-page/html/about.html
+++ b/home-page/html/about.html
@@ -148,11 +148,16 @@
         /* Modal Popup Styles */
         .modal-notification .modal-dialog {
             max-width: 400px;
+            position: fixed;
+            right: 20px; /* Đặt modal cách mép phải 20px */
+            top: 20px; /* Đặt modal cách mép trên 20px */
+            margin: 0; /* Bỏ margin mặc định */
         }
 
         .modal-notification .modal-content {
             border-radius: 10px;
-            border: 2px solid #3b82f6;
+            border: 2px solid #22c55e; /* Màu xanh lá cho viền */
+            background-color: #f0fdf4; /* Màu nền xanh nhạt */
         }
 
         .modal-notification .modal-body {
@@ -163,7 +168,7 @@
         }
 
         .modal-notification .modal-body a {
-            color: #3b82f6;
+            color: #15803d; /* Màu xanh lá đậm hơn cho liên kết */
             text-decoration: none;
         }
 
@@ -171,6 +176,12 @@
             text-decoration: underline;
         }
 
+        /* Đảm bảo modal không bị che khuất */
+        .modal-notification {
+            z-index: 1055; /* Đặt z-index cao hơn nếu cần */
+        }
+
+        /* Responsive cho màn hình nhỏ */
         @media (max-width: 768px) {
             .hero h1 {
                 font-size: 2rem;
@@ -199,6 +210,8 @@
 
             .modal-notification .modal-dialog {
                 max-width: 90%;
+                right: 10px; /* Giảm khoảng cách mép phải cho màn hình nhỏ */
+                top: 10px; /* Giảm khoảng cách mép trên */
             }
         }
 
@@ -281,7 +294,7 @@
     </nav>
 
     <!-- Modal Popup cho thông báo -->
-    <div class="modal fade" id="notificationModal" tabindex="-1" aria-labelledby="notificationModalLabel" aria-hidden="true">
+    <div class="modal fade modal-notification" id="notificationModal" tabindex="-1" aria-labelledby="notificationModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-notification">
             <div class="modal-content">
                 <div class="modal-body" id="notificationModalBody">
@@ -371,174 +384,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Shared JS -->
     <script src="../js/auth.js"></script>
+    <script src="../js/notification.js"></script>
     <!-- Page-specific JS -->
     <script>
-        let stompClient = null;
-        let reconnectAttempts = 0;
-        const maxReconnectAttempts = 5;
-        let orders = [];
-
-        // Hàm lấy danh sách đơn hàng
-        async function fetchUserOrders() {
-            if (!isLoggedIn()) {
-                console.log("Chưa đăng nhập, bỏ qua fetchUserOrders");
-                return;
-            }
-
-            try {
-                const token = localStorage.getItem('accessToken');
-                const payload = parseJwt(token);
-                const userId = payload.id;
-                if (!userId) throw new Error("Không tìm thấy userId trong JWT payload");
-
-                console.log('Đang lấy đơn hàng cho user ID:', userId);
-                const controller = new AbortController();
-                const timeoutId = setTimeout(() => controller.abort(), 10000);
-                const response = await fetch(`${API_BASE_URL}/orders/user/${userId}?page=0&size=10&orderBy=createdAt`, {
-                    headers: {
-                        'Authorization': `Bearer ${token}`,
-                        'Content-Type': 'application/json'
-                    },
-                    signal: controller.signal
-                });
-                clearTimeout(timeoutId);
-
-                if (!response.ok) {
-                    let errorMessage = 'Lỗi khi lấy đơn hàng';
-                    try {
-                        const error = await response.json();
-                        errorMessage = error.message || errorMessage;
-                    } catch (e) {}
-                    console.error(`Lỗi API: ${response.status} - ${errorMessage}`);
-                    if (response.status === 401) {
-                        console.error('Phiên hết hạn. Vui lòng đăng nhập lại.');
-                        showNotification('Phiên đăng nhập hết hạn. Vui lòng đăng nhập lại.');
-                        logout();
-                    }
-                    return;
-                }
-
-                const data = await response.json();
-                orders = data.result.content || [];
-                console.log("Đã lấy được", orders.length, "đơn hàng:", orders);
-            } catch (error) {
-                console.error('Lỗi khi lấy đơn hàng:', error.message);
-                if (error.name === 'AbortError') {
-                    showNotification('Không thể lấy dữ liệu đơn hàng: Máy chủ không phản hồi.');
-                } else if (error.message.includes('Failed to fetch')) {
-                    showNotification('Không thể kết nối với máy chủ. Vui lòng kiểm tra kết nối mạng.');
-                }
-            }
-        }
-
-        // Hàm hiển thị thông báo dưới dạng popup
-        function showNotification(message) {
-            const modal = new bootstrap.Modal(document.getElementById('notificationModal'));
-            const modalBody = document.getElementById('notificationModalBody');
-            modalBody.innerHTML = message;
-
-            modal.show();
-
-            // Tự động đóng sau 5 giây
-            setTimeout(() => {
-                modal.hide();
-            }, 5000);
-
-            // Cho phép đóng thủ công (đã có nút close mặc định của modal)
-        }
-
-        // Hàm polling dự phòng
-        function startPolling() {
-            const pollingInterval = setInterval(async () => {
-                if (!isLoggedIn()) {
-                    clearInterval(pollingInterval);
-                    return;
-                }
-                try {
-                    const token = localStorage.getItem('accessToken');
-                    const payload = parseJwt(token);
-                    const userId = payload.id;
-                    const response = await fetch(`${API_BASE_URL}/orders/user/${userId}?page=0&size=10&orderBy=createdAt`, {
-                        headers: {
-                            'Authorization': `Bearer ${token}`,
-                            'Content-Type': 'application/json'
-                        }
-                    });
-                    if (!response.ok) {
-                        console.error('Lỗi khi polling:', await response.text());
-                        return;
-                    }
-                    const data = await response.json();
-                    const newOrders = data.result.content || [];
-                    console.log('Danh sách đơn hàng mới từ polling:', newOrders);
-                    newOrders.forEach(newOrder => {
-                        const existingOrder = orders.find(o => o.id === newOrder.id);
-                        if (!existingOrder || existingOrder.status !== newOrder.status) {
-                            orders = orders.map(o => o.id === newOrder.id ? newOrder : o);
-                            showNotification(`Đơn hàng #${newOrder.id} đã được cập nhật: ${newOrder.status} <a href="ordertrack.html?orderId=${newOrder.id}" class="text-primary ms-2">Xem</a>`);
-                        }
-                    });
-                } catch (error) {
-                    console.error('Lỗi khi polling:', error);
-                }
-            }, 15000);
-        }
-
-        // Hàm khởi tạo WebSocket
-        function initializeWebSocket() {
-            if (!isLoggedIn()) {
-                console.log("Chưa đăng nhập, bỏ qua khởi tạo WebSocket");
-                return;
-            }
-
-            const token = localStorage.getItem('accessToken');
-            const payload = parseJwt(token);
-            const userId = payload.id;
-            if (!userId) {
-                console.error('Phiên người dùng không hợp lệ.');
-                showNotification('Phiên đăng nhập không hợp lệ. Vui lòng đăng nhập lại.');
-                logout();
-                return;
-            }
-
-            const socket = new SockJS(`${API_BASE_URL}/ws`);
-            stompClient = Stomp.over(socket);
-
-            stompClient.connect(
-                { Authorization: `Bearer ${token}` },
-                () => {
-                    console.log('WebSocket đã kết nối, đang đăng ký với /topic/orders/' + userId);
-                    stompClient.subscribe(`/topic/orders/${userId}`, (message) => {
-                        console.log('Nhận được thông điệp WebSocket:', message.body);
-                        try {
-                            const data = JSON.parse(message.body);
-                            console.log('Dữ liệu phân tích:', data);
-                            if (data.id && data.status) {
-                                showNotification(`Đơn hàng #${data.id} đã được cập nhật: ${data.status} <a href="ordertrack.html?orderId=${data.id}" class="text-primary ms-2">Xem</a>`);
-                            } else {
-                                console.warn('Thiếu id hoặc status trong thông điệp:', data);
-                            }
-                        } catch (error) {
-                            console.error('Lỗi khi xử lý thông điệp WebSocket:', error);
-                        }
-                    });
-                },
-                (error) => {
-                    console.error('Lỗi WebSocket:', error);
-                    if (reconnectAttempts < maxReconnectAttempts) {
-                        reconnectAttempts++;
-                        console.log(`Đang thử kết nối lại WebSocket, lần ${reconnectAttempts}/${maxReconnectAttempts}`);
-                        setTimeout(initializeWebSocket, 5000);
-                    } else {
-                        console.error('Không thể kết nối WebSocket sau nhiều lần thử');
-                        showNotification('Không thể kết nối với cập nhật thời gian thực. Đang sử dụng phương pháp dự phòng.');
-                        startPolling();
-                    }
-                }
-            );
-        }
-
-        // Khởi tạo sau khi DOM load
         document.addEventListener('DOMContentLoaded', () => {
             updateUI();
             fetchUserOrders().then(() => startPolling());
