--- a/home-page/html/login.html
+++ b/home-page/html/login.html
@@ -629,7 +629,7 @@
               <input type="checkbox" id="rememberMe" name="rememberMe" />
               <label for="rememberMe">Ghi nhớ đăng nhập</label>
             </div>
-            <a href="forgot-password.html" class="forgot-password">Quên mật khẩu?</a>
+            <a href="forgotPassword.html" class="forgot-password">Quên mật khẩu?</a>
           </div>
 
           <button type="submit" class="btn-submit" id="loginBtn">
