--- a/waiter/index.html
+++ b/waiter/index.html
@@ -193,7 +193,7 @@
             <div class="orders-section" id="dashboardOrdersSection">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <h5 class="mb-0">
-                        <i class="fas fa-clipboard-list me-2"></i>
+                        <i class="fas fa-clipboard-list me-2" style="color: var(--primary)"></i>
                         Đơn hàng gần đây
                     </h5>
                     <div class="d-flex gap-2">
