--- a/customer/home-page.html
+++ b/customer/home-page.html
@@ -8,248 +8,7 @@
     <title>FoodHub - Trang chủ</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f8f9fa;
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        .header-section {
-            background: white;
-            padding: 1rem 20px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-
-        .restaurant-info {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .restaurant-logo {
-            width: 40px;
-            height: 40px;
-            background: #ff6b35;
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 1.2rem;
-            font-weight: bold;
-        }
-
-        .restaurant-details h5 {
-            margin: 0;
-            font-weight: 700;
-            color: #333;
-        }
-
-        .restaurant-details p {
-            margin: 0;
-            color: #666;
-            font-size: 0.875rem;
-            display: flex;
-            align-items: center;
-        }
-
-        .cart-button {
-            position: relative;
-            background: #ff6b35;
-            color: white;
-            border: none;
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 1.1rem;
-        }
-
-        .cart-badge {
-            position: absolute;
-            top: -5px;
-            right: -5px;
-            background: #dc3545;
-            color: white;
-            border-radius: 50%;
-            width: 20px;
-            height: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 0.75rem;
-            font-weight: bold;
-        }
-
-        .welcome-section {
-            background: white;
-            padding: 2rem 1rem;
-            text-align: center;
-            margin-bottom: 1rem;
-        }
-
-        .welcome-icon {
-            width: 80px;
-            height: 80px;
-            background: linear-gradient(135deg, #ff6b35, #f7931e);
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin: 0 auto 1rem;
-            color: white;
-            font-size: 2rem;
-        }
-
-        .welcome-section h2 {
-            color: #333;
-            font-weight: 700;
-            margin-bottom: 0.5rem;
-        }
-
-        .welcome-section p {
-            color: #666;
-            margin-bottom: 1.5rem;
-        }
-
-        .quick-actions {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 1rem;
-            padding: 0 1rem;
-            margin-bottom: 2rem;
-        }
-
-        .action-btn {
-            background: white;
-            border: 2px solid #e9ecef;
-            border-radius: 12px;
-            padding: 1.5rem 1rem;
-            text-align: center;
-            text-decoration: none;
-            color: #333;
-            transition: all 0.3s ease;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 0.5rem;
-        }
-
-        .action-btn:hover {
-            border-color: #ff6b35;
-            color: #ff6b35;
-            text-decoration: none;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 15px rgba(255, 107, 53, 0.2);
-        }
-
-        .action-icon {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 1.3rem;
-            color: white;
-        }
-
-        .menu-icon {
-            background: linear-gradient(135deg, #ff6b35, #f7931e);
-        }
-
-        .order-icon {
-            background: linear-gradient(135deg, #28a745, #20c997);
-        }
-
-        .chat-icon {
-            background: linear-gradient(135deg, #007bff, #6f42c1);
-        }
-
-        .payment-icon {
-            background: linear-gradient(135deg, #ffc107, #fd7e14);
-        }
-
-        .action-btn h6 {
-            margin: 0;
-            font-weight: 600;
-            font-size: 0.9rem;
-        }
-
-        .status-section {
-            background: white;
-            margin: 1rem;
-            padding: 1.5rem;
-            border-radius: 12px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-        }
-
-        .status-header {
-            display: flex;
-            align-items: center;
-            justify-content: between;
-            margin-bottom: 1rem;
-        }
-
-        .status-badge {
-            background: #d4edda;
-            color: #155724;
-            padding: 0.25rem 0.75rem;
-            border-radius: 20px;
-            font-size: 0.75rem;
-            font-weight: 600;
-            text-transform: uppercase;
-            margin-left: auto;
-        }
-
-        .info-card {
-            background: #f8f9fa;
-            border-radius: 8px;
-            padding: 1rem;
-            margin-top: 1rem;
-            text-align: center;
-        }
-
-        .info-card i {
-            color: #ff6b35;
-            font-size: 1.5rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .info-card h6 {
-            margin: 0;
-            color: #333;
-            font-weight: 600;
-        }
-
-        .info-card p {
-            margin: 0;
-            color: #666;
-            font-size: 0.875rem;
-        }
-
-        .container-custom {
-            max-width: 480px;
-            margin: 0 auto;
-        }
-
-        @media (max-width: 576px) {
-            .quick-actions {
-                grid-template-columns: 1fr;
-            }
-
-            .restaurant-details h5 {
-                font-size: 1.1rem;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="css/home-page.css">
 </head>
 
 <body>
@@ -270,7 +29,10 @@
                         </p>
                     </div>
                 </div>
-
+                <div class="user-info">
+                    <span>Xin chào,</span>
+                    <div class="user-name" id="customerName">Khách hàng</div>
+                </div>
             </div>
         </div>
     </div>
@@ -340,7 +102,8 @@
         function initializeData() {
             const tableNumber = new URLSearchParams(window.location.search).get('tableNumber');
             document.getElementById('tableNumber').textContent = String(tableNumber);
-
+            const customerName = localStorage.getItem('customerName') || 'Khách hàng';
+            document.getElementById('customerName').textContent = customerName;
             // Cập nhật số lượng giỏ hàng
             updateCartCount();
         }
