--- a/customer/view-food-detail.html
+++ b/customer/view-food-detail.html
@@ -223,6 +223,7 @@
     </button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="js/backend-url.js"></script>
     <script src="js/cart-manager.js"></script> 
     <script src="js/view-food-detail.js"></script>
 </body>
