--- a/chef/index.html
+++ b/chef/index.html
@@ -298,7 +298,7 @@
       console.log('Initializing WebSocket for role:', currentWorkSchedule.role);
 
       // Kết nối WebSocket
-      connectWebSocket(currentWorkSchedule, handleWebSocketMessage);
+      connectNotificationWebSocket(currentWorkSchedule, handleWebSocketMessage);
     }
 
     // Function to display user information
