--- a/home-page/html/home.html
+++ b/home-page/html/home.html
@@ -46,13 +46,8 @@
         }
 
         @keyframes shimmer {
-            0% {
-                opacity: 0.3;
-            }
-
-            100% {
-                opacity: 0.7;
-            }
+            0% { opacity: 0.3; }
+            100% { opacity: 0.7; }
         }
 
         .hero-content {
@@ -62,15 +57,8 @@
         }
 
         @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
+            from { opacity: 0; transform: translateY(30px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         .hero h1 {
@@ -324,15 +312,15 @@
         .modal-notification .modal-dialog {
             max-width: 400px;
             position: fixed;
-            right: 20px; /* Đặt modal cách mép phải 20px */
-            top: 20px; /* Đặt modal cách mép trên 20px */
-            margin: 0; /* Bỏ margin mặc định */
+            right: 20px;
+            top: 20px;
+            margin: 0;
         }
 
         .modal-notification .modal-content {
             border-radius: 10px;
-            border: 2px solid #22c55e; /* Màu xanh lá cho viền */
-            background-color: #f0fdf4; /* Màu nền xanh nhạt */
+            border: 2px solid #22c55e;
+            background-color: #f0fdf4;
         }
 
         .modal-notification .modal-body {
@@ -343,7 +331,7 @@
         }
 
         .modal-notification .modal-body a {
-            color: #15803d; /* Màu xanh lá đậm hơn cho liên kết */
+            color: #15803d;
             text-decoration: none;
         }
 
@@ -351,32 +339,207 @@
             text-decoration: underline;
         }
 
-        /* Đảm bảo modal không bị che khuất */
         .modal-notification {
-            z-index: 1055; /* Đặt z-index cao hơn nếu cần */
+            z-index: 1055;
+        }
+
+        /* Chat Window Styles */
+        .chat-container {
+            display: none;
+            position: fixed;
+            bottom: 80px;
+            right: 20px; /* Đặt ở góc phải dưới */
+            width: 380px;
+            height: 550px;
+            background: #ffffff;
+            border-radius: 12px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+            display: flex;
+            flex-direction: column;
+            border: 1px solid #e0e0e0;
+            z-index: 1060; /* Cao hơn modal-notification */
+            transition: transform 0.3s ease, opacity 0.3s ease;
+        }
+
+        .chat-container.show {
+            display: flex;
+            transform: translateY(0);
+            opacity: 1;
+        }
+
+        .chat-container.hidden {
+            transform: translateY(20px);
+            opacity: 0;
+        }
+
+        .chat-header {
+            background: #FEA116; /* Phù hợp với màu chủ đạo của FoodHub */
+            color: var(--dark-green);
+            padding: 12px 16px;
+            border-radius: 12px 12px 0 0;
+            font-size: 18px;
+            font-weight: 500;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .chat-header button {
+            background: none;
+            border: none;
+            color: var(--dark-green);
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        .messages {
+            flex: 1;
+            overflow-y: auto;
+            padding: 16px;
+            background: #f5f5f5;
+            scroll-behavior: smooth;
+        }
+
+        .message {
+            margin-bottom: 12px;
+            padding: 10px 14px;
+            border-radius: 8px;
+            font-size: 15px;
+            line-height: 1.5;
+            position: relative;
+            max-width: 80%;
+            word-wrap: break-word;
+        }
+
+        .message.user {
+            background: #FEA116; /* Phù hợp với màu chủ đạo */
+            color: var(--dark-green);
+            margin-left: auto;
+            border-bottom-right-radius: 2px;
+        }
+
+        .message.bot {
+            background: #ffffff;
+            border: 1px solid #e0e0e0;
+            margin-right: auto;
+            border-bottom-left-radius: 2px;
+        }
+
+        .message-time {
+            font-size: 12px;
+            color: #666;
+            margin-top: 4px;
+            opacity: 0.7;
+        }
+
+        .bot ul, .bot ol {
+            padding-left: 20px;
+            margin: 8px 0;
+        }
+
+        .bot li {
+            margin-bottom: 6px;
+        }
+
+        .bot strong {
+            color: #FEA116; /* Phù hợp với màu chủ đạo */
+            font-weight: 600;
+        }
+
+        .bot code {
+            background: #f4f4f4;
+            padding: 2px 6px;
+            border-radius: 4px;
+            font-family: 'Courier New', Courier, monospace;
+        }
+
+        .bot pre {
+            background: #f4f4f4;
+            padding: 10px;
+            border-radius: 6px;
+            overflow-x: auto;
+        }
+
+        .input-area {
+            display: flex;
+            gap: 8px;
+            padding: 12px;
+            background: #ffffff;
+            border-top: 1px solid #e0e0e0;
+        }
+
+        input[type="text"] {
+            flex: 1;
+            padding: 10px;
+            border: 1px solid #e0e0e0;
+            border-radius: 6px;
+            font-size: 15px;
+            outline: none;
+            transition: border-color 0.3s, box-shadow 0.3s;
+        }
+
+        input[type="text"]:focus {
+            border-color: #FEA116;
+            box-shadow: 0 0 0 2px rgba(254, 161, 22, 0.2);
+        }
+
+        button {
+            padding: 10px 16px;
+            border: none;
+            background: #FEA116;
+            color: var(--dark-green);
+            border-radius: 6px;
+            cursor: pointer;
+            font-size: 15px;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background: #e69114;
+        }
+
+        button.clear-btn {
+            background: #e0e0e0;
+            color: #333;
+        }
+
+        button.clear-btn:hover {
+            background: #d0d0d0;
+        }
+
+        #chat-toggle {
+            position: fixed;
+            bottom: 20px;
+            right: 20px; /* Đặt ở góc phải dưới */
+            width: 50px;
+            height: 50px;
+            background: #FEA116; /* Phù hợp với màu chủ đạo */
+            color: var(--dark-green);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            font-size: 24px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+            z-index: 1060; /* Cao hơn modal-notification */
         }
 
         @media (max-width: 768px) {
-            .hero h1 {
-                font-size: 2rem;
-            }
-
-            .hero p {
-                font-size: 0.9rem;
-            }
-
-            .section-title {
-                font-size: 2rem;
-            }
-
-            .stat-number {
-                font-size: 2rem;
-            }
-
+            .hero h1 { font-size: 2rem; }
+            .hero p { font-size: 0.9rem; }
+            .section-title { font-size: 2rem; }
+            .stat-number { font-size: 2rem; }
             .modal-notification .modal-dialog {
                 max-width: 90%;
-                right: 10px; /* Giảm khoảng cách mép phải cho màn hình nhỏ */
-                top: 10px; /* Giảm khoảng cách mép trên */
+                right: 10px;
+                top: 10px;
+            }
+            .chat-container {
+                width: 90%;
+                height: 70vh;
+                right: 10px;
+                bottom: 70px;
             }
         }
 
@@ -394,25 +557,13 @@
 
         /* Animations */
         @keyframes fadeInDown {
-            from {
-                opacity: 0;
-                transform: translateY(-20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
     </style>
 </head>
@@ -479,6 +630,23 @@
                     <!-- Nội dung thông báo sẽ được chèn vào đây -->
                 </div>
             </div>
+        </div>
+    </div>
+
+    <!-- Chat Toggle Button -->
+    <div id="chat-toggle" onclick="toggleChat()">💬</div>
+
+    <!-- Chat Window -->
+    <div id="chat-container" class="chat-container">
+        <div class="chat-header">
+            <span>FoodHub Chat</span>
+            <button onclick="toggleChat()">✕</button>
+        </div>
+        <div class="messages" id="messages"></div>
+        <div class="input-area">
+            <input type="text" id="userInput" placeholder="Nhập tin nhắn..." onkeydown="if(event.key === 'Enter') sendMessage()" />
+            <button onclick="sendMessage()">Gửi</button>
+            <button class="clear-btn" onclick="clearChatHistory()">Xóa</button>
         </div>
     </div>
 
@@ -619,6 +787,7 @@
                         <p>Cocktail trái cây tươi mát, kết hợp dưa hấu, dứa, kiwi và cam mọng nước, hòa quyện trong lớp syrup ngọt nhẹ và đá viên mát lạnh.</p>
                         <div class="menu-item-price">60.000₫</div>
                     </div>
+                    </div>
                 </div>
             </div>
             <div class="text-center mt-4">
@@ -668,6 +837,112 @@
     <script src="../js/notification.js"></script>
     <!-- Page-specific JS -->
     <script>
+        // Khởi tạo lịch sử chat từ localStorage
+        let chatHistory = JSON.parse(localStorage.getItem('chatHistory') || '[]');
+
+        // Hiển thị lại lịch sử chat khi reload
+        function loadChatHistory() {
+            const msgDiv = document.getElementById('messages');
+            msgDiv.innerHTML = ''; // Xóa nội dung cũ
+            chatHistory.forEach(msg => {
+                appendMessage(msg.sender, msg.text, msg.type, msg.timestamp);
+            });
+        }
+
+        // Gọi hàm loadChatHistory khi trang được tải
+        document.addEventListener('DOMContentLoaded', () => {
+            loadChatHistory();
+            updateUI();
+            fetchUserOrders().then(() => startPolling());
+            initializeWebSocket();
+        });
+
+        function toggleChat() {
+            const chatContainer = document.getElementById('chat-container');
+            const isHidden = chatContainer.classList.contains('show');
+            chatContainer.classList.toggle('show', !isHidden);
+            chatContainer.classList.toggle('hidden', isHidden);
+            if (!isHidden) document.getElementById('userInput').focus();
+        }
+
+        async function sendMessage() {
+            const input = document.getElementById('userInput');
+            const message = input.value.trim();
+            if (!message) return;
+
+            const timestamp = new Date().toLocaleTimeString('vi-VN', { hour: '2-digit', minute: '2-digit' });
+            const userMsg = { sender: 'Bạn', text: message, type: 'user', timestamp };
+            appendMessage(userMsg.sender, userMsg.text, userMsg.type, timestamp);
+            chatHistory.push(userMsg);
+            saveChatHistory();
+
+            input.value = '';
+
+            try {
+                const response = await fetch('http://localhost:8080/api/gemini/reply', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ message })
+                });
+
+                if (!response.ok) throw new Error(`Yêu cầu thất bại: ${response.status}`);
+
+                const data = await response.json();
+                const reply = data.result?.reply;
+                if (reply) {
+                    const formattedReply = formatReply(reply);
+                    const botMsg = { sender: 'FoodHub Bot', text: formattedReply, type: 'bot', timestamp };
+                    appendMessage(botMsg.sender, botMsg.text, botMsg.type, timestamp);
+                    chatHistory.push(botMsg);
+                    saveChatHistory();
+                } else {
+                    appendMessage('FoodHub Bot', 'Không có phản hồi hợp lệ.', 'bot', timestamp);
+                }
+            } catch (err) {
+                appendMessage('Lỗi', `Không thể kết nối: ${err.message}`, 'bot', timestamp);
+            }
+        }
+
+        function formatReply(text) {
+            // Xử lý Markdown
+            let formatted = text
+                .replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>') // In đậm
+                .replace(/\*(.*?)\*/g, '<em>$1</em>') // In nghiêng
+                .replace(/`([^`]+)`/g, '<code>$1</code>') // Code inline
+                .replace(/```([\s\S]*?)```/g, '<pre><code>$1</code></pre>') // Code block
+                .replace(/^### (.*)$/gm, '<h3>$1</h3>') // Tiêu đề cấp 3
+                .replace(/^## (.*)$/gm, '<h2>$1</h2>') // Tiêu đề cấp 2
+                .replace(/^# (.*)$/gm, '<h1>$1</h1>') // Tiêu đề cấp 1
+                .replace(/^\* (.*)$/gm, '<li>$1</li>') // Danh sách không thứ tự
+                .replace(/^\d+\. (.*)$/gm, '<li>$1</li>') // Danh sách có thứ tự
+                .replace(/(<li>.*<\/li>)/g, match => `<ul>${match}</ul>`) // Bao danh sách
+                .replace(/<\/ul>\s*<ul>/g, '') // Gộp danh sách liên tiếp
+                .replace(/^(?!<h[1-3]>|<ul>|<pre>)(.+)$/gm, '<p>$1</p>'); // Đoạn văn
+            return formatted;
+        }
+
+        function appendMessage(sender, text, type, timestamp) {
+            const msgDiv = document.getElementById('messages');
+            const div = document.createElement('div');
+            div.className = `message ${type}`;
+            div.innerHTML = `
+                <strong>${sender}</strong>: ${text}
+                <div class="message-time">${timestamp}</div>
+            `;
+            msgDiv.appendChild(div);
+            msgDiv.scrollTop = msgDiv.scrollHeight;
+        }
+
+        function saveChatHistory() {
+            localStorage.setItem('chatHistory', JSON.stringify(chatHistory));
+        }
+
+        function clearChatHistory() {
+            chatHistory = [];
+            document.getElementById('messages').innerHTML = '';
+            saveChatHistory();
+        }
+
         // Scroll animations
         function handleScrollAnimations() {
             const elements = document.querySelectorAll('.fade-in');
@@ -712,12 +987,8 @@
 
         window.addEventListener('load', handleScrollAnimations);
 
-        // Initialize UI and notification system
-        document.addEventListener('DOMContentLoaded', () => {
-            updateUI();
-            fetchUserOrders().then(() => startPolling());
-            initializeWebSocket();
-        });
+        // Khởi tạo trạng thái ban đầu
+        document.getElementById('chat-toggle').style.display = 'flex';
     </script>
 </body>
 
